@@ -396,6 +396,9 @@
 
       \item Including header \file{S.h} from C++ code will fail on some
       platforms, and so gives a compilation warning on all.
+      
+      \item The deprecated header \file{Rdefines.h} is now compatible
+      with defining \code{R_NO_REMAP}.
     }
   }
 
